# elevate

./: README.md
central_hub/: Makefile.in  README  acinclude.m4  aclocal.m4  configure  configure.ac
central_hub/src/: Makefile.am  Makefile.in  central_hub.c  sys.c  sys.h
docs/: CNAME  about.html  contact.html  download.html  index.html  links.html  news.html  screenshots.html  style.css
elevate/: ChangeLog  Makefile.am  Makefile.in  README  configure  configure.ac
elevate/modules/: Makefile.am  Makefile.in  system.info
elevate/src/: Makefile.am  Makefile.in  app.c  app.h  elevate.c  engine.c  engine.h  files.c  files.h  gfx.c  gfx.h  lang.c  lang.h  mod_strings.h  modapp.c  modapp.h  parser.c  parser.h
syndesis/: Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac
syndesis/src/: Makefile.am  Makefile.in  common.c  common.h  download.c  integrator.c  integrator.h  netmonitor.c  view.c
vault/: AUTHORS  Makefile.in  NEWS  README  TODO  configure  configure.ac
vault/src/: Makefile.am  Makefile.in  db.c  db.h  files.c  files.h  logic.c  logic.h  schema.h  vault.c  vault.h
