EXTRA_DIST = \
	      cdrecord.modapp \
	      chrome.app \
	      feh.app \
	      firefox.app \
	      gftp.app \
	      gunzip.modapp \
	      gzip.modapp \
	      mplayer.app \
	      nmap.modapp \
	      pdfinfo.modapp \
	      system.info \
	      syndesis.app \
	      tail.modapp \
	      vim.app \
	      wget.modapp \
	      quod.app \
	      xpdf.app \
	      xterm.app 

moduledir=$(pkgdatadir)/modules
module_DATA = \
	      cdrecord.modapp \
	      chrome.app \
	      feh.app \
	      firefox.app \
	      gftp.app \
	      gunzip.modapp \
	      gzip.modapp \
	      mplayer.app \
	      nmap.modapp \
	      pdfinfo.modapp \
	      system.info \
	      syndesis.app \
	      tail.modapp \
	      vim.app \
	      wget.modapp \
	      quod.app \
	      xpdf.app \
	      xterm.app 
